# jmsd_tpc_googletest

./: .gitmodules  CMakeLists.txt  README.md
_tpc_cmake_settings/: tpc-google-mock-set-compiler-settings.cmake  tpc-google-test-set-compiler-settings.cmake
_tpc_cmake_settings/compiler-settings/: tpc-google-common-set-linux-compiler-settings.cmake  tpc-google-mock-set-windows-compiler-settings.cmake  tpc-google-test-set-windows-compiler-settings.cmake
tpc_google_mock/: CMakeLists.modified.txt  CMakeLists.txt
tpc_google_test/: CMakeLists.txt
